Improve-130-time-picker Remove ariaLabel from Icon component, remove redundant code, extend types, fix TimeColumn min and sec max number, correct label alignment,

--- a/src/components/molecules/DatePickerInput/styles.module.scss
+++ b/src/components/molecules/DatePickerInput/styles.module.scss
@@ -14,7 +14,7 @@
     @include labelTextStyle;
     display: inline-block;
     padding-right: spacing(2.5);
-    padding-top: spacing(1.5);
+    align-self: center;
   }
 
   .wrapper {
